--- a/src/i3wm.conf
+++ b/src/i3wm.conf
@@ -1,5 +1,5 @@
 # Define names for workspaces
-set $ws1 "1"
+set $ws1 "1:Healthchecks"
 set $ws2 "2"
 set $ws3 "3"
 set $ws4 "4"
@@ -38,7 +38,7 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 exec --no-startup-id xset s off -dpms
 exec --no-startup-id feh --bg-fill /home/ashish/Pictures/wallpaper/alpine-linux-wallpaper.jpg
 exec --no-startup-id i3-msg 'workspace 10:Terminal; exec terminator'
-exec --no-startup-id picom --blur-background > /dev/null
+exec --no-startup-id i3-msg 'workspace 1:Healthchecks; exec firefox --kiosk "https://myhealthchecks.herokuapp.com/"'
 
 # Windows
 for_window [class=".*"] border pixel 0
