Changed i3lock_sleep.sh lock file location

--- a/src/i3wm.conf
+++ b/src/i3wm.conf
@@ -35,6 +35,7 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
 # Startup
+exec --no-startup-id rm -f '/home/ashish/.i3lock'
 exec --no-startup-id xset s off -dpms
 exec --no-startup-id feh --bg-fill /home/ashish/Pictures/wallpaper/alpine-linux-wallpaper.jpg
 exec --no-startup-id i3-msg 'workspace 10:Terminal; exec terminator'
